--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webcdr",
+  "name": "viola-cdr",
   "version": "0.0.1",
   "description": "Viola CDR: Asterisk CDR viewer",
   "main": "app.js",
