--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "compression": "^1.5.0",
     "cookie-parser": "^1.3.0",
     "cookie-session": "^1.2.0",
-    "excel-export": "^0.4.1",
     "express": "^4.13.0",
     "express-session": "^1.11.0",
     "glob": "^5.0.0",
     "ini": "~1.3.0",
+    "joi": "^7.0.1",
     "jquery": "~2.1.1",
     "knex": "^0.8.0",
     "lodash": "^3.10.0",
@@ -37,7 +37,6 @@
     "node-underscorify": "0.0.14",
     "spin.js": "^2.3.2",
     "underscore": "^1.8.0",
-    "zip-stream": "^0.5.0"
   },
   "devDependencies": {
     "browserify": "^11.0.0",
