--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "cookie-session": "^1.2.0",
     "express": "^4.13.0",
     "express-session": "^1.11.0",
-    "glob": "^5.0.0",
-    "ini": "~1.3.0",
+    "glob": "^5.0.0",    
     "joi": "^7.0.1",
     "jquery": "~2.1.1",
     "knex": "^0.8.0",
@@ -36,7 +35,7 @@
     "mysql": "^2.9.0",
     "node-underscorify": "0.0.14",
     "spin.js": "^2.3.2",
-    "underscore": "^1.8.0",
+    "underscore": "^1.8.0"
   },
   "devDependencies": {
     "browserify": "^11.0.0",
