--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "cookie-session": "^1.2.0",
     "express": "^4.13.0",
     "express-session": "^1.11.0",
-    "glob": "^5.0.0",    
+    "glob": "^5.0.0",
+    "http-auth": "^2.2.8",
     "joi": "^7.0.1",
     "jquery": "~2.1.1",
     "knex": "^0.8.0",
