--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viola-cdr",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Viola CDR: Asterisk CDR viewer",
   "main": "app.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "watch-dbg": "watchify public/js/main.js -d -o public/js/build/bundle.js -v",
     "build": "browserify public/js/main.js -o public/js/build/bundle.js",
     "build-dbg": "browserify public/js/main.js -d -o public/js/build/bundle.js",
-    "test": "semistandard"
+    "test": "semistandard",
+    "postinstall": "cp ./config.js /etc/viola-cdr/config.js"
   },
   "author": "Serge Dmitriev <serge.dmitriev@gmail.com>",
   "license": "MIT",
