--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viola-cdr",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Viola CDR: Asterisk CDR viewer",
   "main": "app.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build": "browserify public/js/main.js -o public/js/build/bundle.js",
     "build-dbg": "browserify public/js/main.js -d -o public/js/build/bundle.js",
     "test": "semistandard",
-    "postinstall": "cp ./config.js /etc/viola-cdr/config.js"
+    "postinstall": "postinstall.sh"
   },
   "author": "Serge Dmitriev <serge.dmitriev@gmail.com>",
   "license": "MIT",
@@ -45,7 +45,6 @@
     "browserify-shim": "^3.8.0",
     "semistandard": "^7.0.2"
   },
-  "private": true,
   "browserify": {
     "transform": [
       [
