rename to ryocdr

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "viola-cdr",
+  "name": "ryocdr",
   "version": "0.0.1",
   "authors": [
     "Sergey Dmitriev <serge.dmitriev@gmail.com>"
