--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,11 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "backgrid": "~0.3.5",
-    "backbone.paginator": "~2.0.0",
+    "backbone.paginator": "~2.0.3",
     "backgrid-paginator": "~0.3.5",
     "bootstrap-select": "~1.5.2",
     "bootstrap-daterangepicker": "~2.0.0",
     "audiojs": "*",
-    "font-awesome": "~4.2.0",
-    "underscore": "1.5.2"
+    "font-awesome": "~4.2.0"    
   }
 }
