--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "author": "Serge Dmitriev <serge.dmitriev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "backbone": "^1.2.1",
+    "backbone": "1.1.2",
     "backbone.marionette": "^2.4.2",    
     "bluebird": "^2.9.0",
     "body-parser": "^1.13.3",
-    "bookshelf": "^0.8.0",    
+    "bookshelf": "^0.8.0",
     "compression": "^1.5.0",
     "cookie-parser": "^1.3.0",
     "cookie-session": "^1.2.0",
